--- a/4bd78dc2ba59597823d5b33d90df7834f034be26f06356e97ed714971e87b1af/3d_lidar_install.html
+++ b/4bd78dc2ba59597823d5b33d90df7834f034be26f06356e97ed714971e87b1af/3d_lidar_install.html
@@ -60,7 +60,8 @@
           </div>
 
           <p>特に問題がなければ、100%でコンパイルが完了します。</p>
-
+          <p>次に、「config」フォルダ内にある「config.yaml」というファイルをテキストエディタで開きます。<br>
+          15行目のlidar_typeを「RS16」に変更します。</p>
 
           <br>
 
