--- a/4bd78dc2ba59597823d5b33d90df7834f034be26f06356e97ed714971e87b1af/index.html
+++ b/4bd78dc2ba59597823d5b33d90df7834f034be26f06356e97ed714971e87b1af/index.html
@@ -28,7 +28,8 @@
             <li><a href="3d_slam_install.html">3D SLAMのインストール</a></li>
             <li><a href="3d_lidar_install.html">3D Lidar driverのインストール</a></li>
             <li><a href="gpu_driver_install.html">GPU Driverのインストール</a></li>
-            <li><a href="ros_install.html">ROSのインストール</a></li>
+            <li><a href="ros_install.html">ROS Noeticのインストール</a></li>
+            <li><a href="ros2_install.html">ROS2 Humbleのインストール</a></li>
           </ur>
 
 
